tests/data/bad/bad_cfg_import.py
from ntc import CN

from ..base_cfg import cfg

cfg = CN(cfg)
